# fw-mrhat-new

./: .clangd  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: toolchain_pic.cmake
src/: bits.h  i2c_app.c  i2c_app.h  i2c_regs.h  i2c_regs_data.h  led_ctrl.c  main.c  onoff.c  pi_mgr.c  pi_mgr.h  pi_mgr_old.c  power_mgr.c  power_mgr.h  tasks.c  tasks.h  timers.c  timers.h
src/experiments/: exp1_low_power_test.c
src/platform/: clock.c  clock.h  config_bits.h  gpio.c  gpio.h  interrupt.c  pins.c  pins.h  plat_gpio.c  plat_gpio.h  plat_pwm.c  plat_pwm.h  pwm.c  pwm.h  pwm1_16bit.c  system.c  system.h  tmr1.c
src/platform copy/: clock.c  i2c1.c  i2c1_client.c  i2c1_multi.c  mvio.c  pins.c  pwm1_16bit.c  system.c  system.h  tmr0.c
